--- a/Deck of Cards Lab/wwwroot/css/site.css
+++ b/Deck of Cards Lab/wwwroot/css/site.css
@@ -16,3 +16,20 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+
+.card-container {
+    display: flex; /* Use flexbox for horizontal layout */
+    flex-wrap: nowrap; /* Prevent cards from wrapping to the next line */
+}
+
+.card {
+    margin-right: 10px; /* Add spacing between cards */
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+}
